[build-system]
requires = ["maturin>=1.4.0,<=2.0.0"]
build-backend = "maturin"

[project]
name = "gyver-attrs-converter"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
